--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,33 @@ jobs:
     steps:
       - checkout
       - run: mvn clean test
+  package:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    steps:
+      - checkout
+      - run: mvn clean package
+      - persist_to_workspace:
+          root: target
+          paths:
+            - managing-secrets-1.3.jar
+  deploy:
+    docker:
+      - image: python:3.7
+    steps:
+      - checkout
+      - attach_workspace:
+          at: target
+      - run: pip install awscli
+      - run: aws s3 cp target/managing-secrets-1.3.jar s3://mybucket/managing-secrets/$CIRCLE_BRANCH/managing-secrets-1.3.jar
 
 workflows:
   version: 2
   build:
     jobs:
       - test
+      - package
+      - deploy:
+          requires:
+            - test
+            - package
