--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,24 @@
 version: 2.1
 
+commands:
+  # CircleCI generally only triggers builds on commits to the main repository,
+  # so PRs coming from branches of the main repo simply reference builds for existing commits
+  # (CIRCLE_BRANCH=branchname and CIRCLE_PR_NUMBER is unset);
+  # The only time PRs will trigger a build is when the PR is referencing a fork
+  # (CIRCLE_BRANCH=pull/XXX and CIRCLE_PR_NUMBER=XXX).
+  early_return_for_forked_pull_requests:
+    description: >-
+      If this build is from a fork, stop executing the current job and return success.
+      This is useful to avoid steps that will fail due to missing credentials.
+    steps:
+      - run:
+          name: Early return if this build is from a forked PR
+          command: |
+            if [ -n "$CIRCLE_PR_NUMBER" ]; then
+              echo "Nothing to upload for forked PRs, so marking this step successful"
+              circleci step halt
+            fi
+
 jobs:
   test:
     docker:
@@ -11,6 +30,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     steps:
+      - early_return_for_forked_pull_requests
       - checkout
       - run: mvn clean package
       - persist_to_workspace:
@@ -21,6 +41,7 @@ jobs:
     docker:
       - image: python:3.7
     steps:
+      - early_return_for_forked_pull_requests
       - checkout
       - attach_workspace:
           at: target
