--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,10 @@ workflows:
     jobs:
       - test
       - package
+      - hold:
+          type: approval
       - deploy:
           requires:
+            - hold
             - test
             - package
