--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,16 +44,19 @@ jobs:
       - run: pip install awscli
       - run: aws s3 cp target/managing-secrets-1.3.jar s3://mybucket/managing-secrets/$CIRCLE_BRANCH/managing-secrets-1.3.jar
 
+  testhold:
+    docker:
+      - image: python:3.7
+    steps:
+      - run: env | grep '^CI'
+
+
 workflows:
   version: 2
   build:
     jobs:
-      - test
-      - package
       - hold:
           type: approval
-      - deploy:
+      - testhold:
           requires:
             - hold
-            - test
-            - package
