--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,10 +53,22 @@ jobs:
 
 workflows:
   version: 2
-  build:
+  build-for-forks:
     jobs:
       - hold:
           type: approval
+          filters:
+            branches:
+              only: /pull.*/
       - testhold:
           requires:
             - hold
+          filters:
+            branches:
+              only: /pull.*/
+  build-for-branches:
+    jobs:
+      - test:
+          filters:
+            branches:
+              ignore: /pull.*/
