This should pass now

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,4 +25,8 @@ workflows:
   build:
     jobs:
       - test
-      - test-with-data
+      - test-with-data:
+        filters:
+          branches:
+            # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+            ignore: /pull\/[0-9]+/
