--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             echo "No AWS_ACCESS_KEY_ID is set! Failing..."
             exit 1;
           else
-            echo "Credentials are available. Let's fetch the data!"
+            echo "Credentials are available: $AWS_ACCESS_KEY_ID"
           fi
 
 workflows:
@@ -26,7 +26,7 @@ workflows:
     jobs:
       - test
       - test-with-data:
-        filters:
-          branches:
-            # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-            ignore: /pull\/[0-9]+/
+          filters:
+            branches:
+              # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+              ignore: /pull\/[0-9]+/
